@@ -1,5 +1,6 @@
 package com.jinforce.backend.config;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.jinforce.backend.security.JwtAuthenticationFilter;
 import com.jinforce.backend.service.JwtService;
 import lombok.RequiredArgsConstructor;
@@ -20,6 +21,10 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
+/**
+ * 스프링 시큐리티 설정 클래스
+ * JWT 기반 인증 구현 및 API 보안 설정
+ */
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
@@ -27,35 +32,48 @@ import java.util.List;
 public class SecurityConfig {
 
     private final JwtService jwtService;
+    private final ObjectMapper objectMapper;
 
+    /**
+     * 보안 필터 체인 설정
+     * JWT 토큰 기반의 RESTful API를 위한 보안 설정
+     */
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         return http
-                .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .csrf(AbstractHttpConfigurer::disable) // REST API이므로 CSRF 보호 비활성화
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // CORS 설정 적용
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // JWT 토큰 사용으로 세션 불필요
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/auth/**", "/resources/public").permitAll()
-                        .anyRequest().authenticated()
+                        .requestMatchers("/auth/**", "/resources/public").permitAll() // 인증 관련 경로는 인증 없이 접근 가능
+                        .anyRequest().authenticated() // 그 외 모든 요청은 인증 필요
                 )
-                .addFilterBefore(new JwtAuthenticationFilter(jwtService), UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(new JwtAuthenticationFilter(jwtService, objectMapper), UsernamePasswordAuthenticationFilter.class) // JWT 인증 필터 추가
                 .build();
     }
 
+    /**
+     * CORS 설정
+     * 네이티브 앱과의 통신을 위한 CORS 정책 설정
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*")); // In production, specify the exact origins
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
-        configuration.setExposedHeaders(List.of("Authorization"));
-        configuration.setMaxAge(3600L);
+        configuration.setAllowedOrigins(List.of("*")); // 모든 오리진 허용 - 프로덕션에서는 특정 오리진으로 제한 권장
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // 허용할 HTTP 메서드
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With")); // 허용할 헤더
+        configuration.setExposedHeaders(List.of("Authorization")); // 클라이언트에 노출할 헤더
+        configuration.setMaxAge(3600L); // preflight 요청 캐시 시간 (1시간)
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", configuration); // 모든 경로에 CORS 설정 적용
         return source;
     }
 
+    /**
+     * RestTemplate 빈 생성
+     * Google API 서버와의 통신에 사용
+     */
     @Bean
     public RestTemplate restTemplate() {
         return new RestTemplate();
