@@ -5,6 +5,7 @@ import com.jinforce.backend.entity.User;
 import com.jinforce.backend.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.oauth2.client.userinfo.DefaultOAuth2UserService;
 import org.springframework.security.oauth2.client.userinfo.OAuth2UserRequest;
 import org.springframework.security.oauth2.core.OAuth2AuthenticationException;
@@ -23,6 +24,9 @@ import java.util.Map;
 public class OAuth2UserService extends DefaultOAuth2UserService {
 
     private final UserRepository userRepository;
+    
+    @Value("${admin.emails:}")
+    private List<String> adminEmails;
 
     @Override
     @Transactional
@@ -52,20 +56,38 @@ public class OAuth2UserService extends DefaultOAuth2UserService {
         throw new IllegalArgumentException("Unsupported provider: " + registrationId);
     }
 
+    /**
+     * OAuth2 인증 정보로 사용자를 조회하거나 생성
+     *
+     * @param userInfo OAuth2 사용자 정보
+     * @return User 엔티티
+     */
     @Transactional
     public User processOAuth2User(OAuth2UserInfoDto userInfo) {
-        // Check if user already exists
         return userRepository.findByEmail(userInfo.getEmail())
                 .map(existingUser -> updateExistingUser(existingUser, userInfo))
                 .orElseGet(() -> registerNewUser(userInfo));
     }
 
+    /**
+     * 기존 사용자 정보 업데이트
+     *
+     * @param existingUser 기존 사용자 엔티티
+     * @param userInfo OAuth2 사용자 정보
+     * @return 업데이트된 사용자 엔티티
+     */
     private User updateExistingUser(User existingUser, OAuth2UserInfoDto userInfo) {
         existingUser.setName(userInfo.getName());
         existingUser.setImageUrl(userInfo.getImageUrl());
         return userRepository.save(existingUser);
     }
 
+    /**
+     * 새 사용자 등록
+     *
+     * @param userInfo OAuth2 사용자 정보
+     * @return 새로 생성된 사용자 엔티티
+     */
     private User registerNewUser(OAuth2UserInfoDto userInfo) {
         User user = User.builder()
                 .email(userInfo.getEmail())
@@ -73,9 +95,43 @@ public class OAuth2UserService extends DefaultOAuth2UserService {
                 .imageUrl(userInfo.getImageUrl())
                 .provider(userInfo.getProvider())
                 .providerId(userInfo.getId())
-                .roles(List.of(User.Role.ROLE_USER))
+                .roles(Collections.singletonList(User.Role.ROLE_USER))
                 .build();
-
+        
+        // 관리자 이메일이면 관리자 권한 추가
+        if (isAdminEmail(userInfo.getEmail())) {
+            user.getRoles().add(User.Role.ROLE_ADMIN);
+        }
+        
         return userRepository.save(user);
+    }
+    
+    /**
+     * 이메일이 관리자 이메일 목록에 포함되어 있는지 확인
+     *
+     * @param email 확인할 이메일
+     * @return 관리자 이메일 여부
+     */
+    private boolean isAdminEmail(String email) {
+        return adminEmails != null && adminEmails.contains(email);
+    }
+    
+    /**
+     * 테스트용: 사용자에게 관리자 권한 추가
+     *
+     * @param email 사용자 이메일
+     * @return 업데이트된 사용자 엔티티
+     */
+    @Transactional
+    public User addAdminRole(String email) {
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다: " + email));
+        
+        if (!user.getRoles().contains(User.Role.ROLE_ADMIN)) {
+            user.getRoles().add(User.Role.ROLE_ADMIN);
+            userRepository.save(user);
+        }
+        
+        return user;
     }
 }
